--- a/document.tex
+++ b/document.tex
@@ -55,6 +55,10 @@ I then checked to see if there are any missing values in the dataset. It returne
 
 I then normalized the data. I first normalized numerical data and assigned them in a range from zero to one. I then normalized categorical data like month and visitor type. I decided to one-hot encode this data. Finally, I normalized boolean data by assigning 1 to true and 0 to false. 
 
+\section{Phase 2}
+
+In phase 2, I built a model to overfit the entire dataset. This phase included experimentation with different amounts of layers and neurons to find the size of a model that overfits the dataset. I wanted to find the model that reached near 100 percent accuracy. First I trained a logistic regression model for 300 epochs. This resulted in 88.47 percent accuracy. Then, I trained a model with two layers and three total neurons for 300 epochs. This resulted in a 90.18 percent accuracy. Then, I trained a three-layer model with 21 total neurons for 300 epochs resulting in 91.28 percent accuracy. Finally, I trained a five-layer model with 251 total neurons. This reached a 99.1 percent accuracy. Because this model reached nearly 100 percent, it overfit the data and my real model should not be larger than this model. 
+
 \section{Phase 3}
 
 In phase 3, I trained multiple models with different amounts of layers and neurons to find the model with the best accuracy. First I shuffled the rows to ensure fair training. Then, I split the data into training and validation sets. I started with a logistic regression model for a baseline classifier that resulted in 88 percent precision, 89 percent recall, and 86 percent F1-score. This model slowly improved over each epoch. Next, I trained a 2-1 neural network model resulting in 90 percent precision, 90 percent recall, and 90 percent F1-score. This model almost improved over every epoch, but slightly slowed down towards the end. Then, I trained a 4-1 neural network model resulting in 89 percent precision, 90 percent recall, and 89 percent F1-score. This model gradually improved but had some epochs towards the end that did not improve. Then, I trained an 8-1 neural network model resulting in 90 percent precision, 90 percent recall, and 90 percent F1-score. This model consistently improved at the beginning but towards the end it was not improving more than it was improving. Then, I trained a 16-8-1 neural network model resulting in 90 percent precision, 90 percent recall, and 90 percent F1-score. This model continuously improved towards the beginning but quickly dwindled down to rarely improving. Then, I trained a 32-16-8-1 neural network model resulting in 89 percent precision, 90 percent recall, and 89 percent F1-score. This model quickly significantly improved but then quickly plateaued. Finally, I trained a 64-32-16-8-1 neural network model resulting in 90 percent precision, 90 percent recall, and 90 percent F1-score. This model very quickly and significantly improved then stopped improving. The table below represents the training and validation accuracies of each model. 
